kubernetes/overlays/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheung0825
spec:
  template:
    spec:
      containers:
        - name: cheung0825
          resources:
            requests:
              memory: 128Mi
              cpu: 0.5
            limits:
              memory: 512Mi
              cpu: 1.0
